[package]
name = "fintrack"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"
egui = "0.27"
egui_extras = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.13"
csv = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }